Changes in 3.2.5 :
- Fix crash caused by dangling pointer to already destroyed view (209338)

Changes in 3.2.4 :
- Improve flexibility of IP blocklist parsing to support more formats
- Fix bug in TorrentFileListModel causing wrong checkstate to be shown
- Fix very rare crash caused by 0 pointer (206689)
- Fix bug causing scheduler to not restart the schedule timer
- Unset Qt message handler when Log is destroyed (197944)
- Fix crash caused by dangling pointer to TorrentControl when removing torrent and torrent list is changing a lot (208385)

Changes in 3.2.3 :
- Make sure View gets focus back when you are finished editing the name of a torrent
- Fix bug causing sizes > 4GB not being displayed properly in plasma applet
- Fix bug in sleep suppression feature causing it to not work when torrents get started at startup (195991)
- Also announce to DHT node when we get back a GetPeers with nodes (194366)
- Use deleteLater when removing torrents this should prevent a crash (197421)
- Do not keep pointer to view menu and groupview menu, this causes crashes when toolbars are reconfigured (198963) 
- Make global shortcut to show and hide ktorrent work again (174541)

Changes in 3.2.2 :
- Fix crash when changing speed limits using system tray menu (188447)
- Fix bug with displaying directory trees in infowidget FileView
- Fix crash caused by calling front on empty QList
- Make sure paths in webseed http requests are URL encoded (189477)
- Prevent torrent from being loaded twice when loading torrents via commandline or external program (190434)
- Fix crash caused by uncaught exception (190317)
- Fix crash caused by sorting list of torrent in QM when the list is being cleared (190759)
- Added patch from amichai which makes the plasma applet a popup applet and which fixes some other things (190822)
- Fix bug causing drag and drop of torrent on to plasma desktop not to work
- Increase numwant to 200 and the maximum number of potential peers to 500